Made adjustments to padding to fix issues with navbar floating off screen

--- a/src/App.css
+++ b/src/App.css
@@ -36,4 +36,6 @@
 .mystyle {
 /* background: radial-gradient(circle, #1a6e27, #083d10 ); */
 background: radial-gradient(circle, #fce4e4,  #003546);
+padding-left: 2%;
+padding-right: 2%;
 }
